Search filter added

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Movies.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Movies.cshtml
@@ -7,7 +7,7 @@
 <div class="header-right">
     <form method="get">
         <div class="input-group">
-            <input class="form-control" type="text" placeholder="Search movie" />
+            <input class="form-control" type="text" placeholder="Search movie" value="@ViewData["Search"]" name="searchTerm" />
             <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-search"></span></span>
         </div>
         <br />
