--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/User/Register.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/User/Register.cshtml
@@ -12,6 +12,28 @@
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-4">
+                        <label asp-for="Firstname"></label>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-user"></span></span>
+                            <input class="form-control" type="text" asp-for="Firstname" placeholder="Firstname" />
+                        </div>
+                        <span asp-validation-for="Firstname" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4">
+                        <label asp-for="Lastname"></label>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-user"></span></span>
+                            <input class="form-control" type="text" asp-for="Lastname" placeholder="Lastname" />
+                        </div>
+                        <span asp-validation-for="Lastname" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4">
                         <label asp-for="Username"></label>
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-user"></span></span>
