movie panel view added

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -7,7 +7,7 @@
 
 <div class="movies">
         <div class="thumbnail">
-            <img class="product-image" src="~/images/Products/product-@(Model.Id).png" alt="Product image" />
+            <img src="~/images/Movies/@(Model.Id).png" alt="Movie image" />
             <div class="caption">
                 <h3>Title: @Model.MovieTitle</h3>
                 <p> Description: @Model.Description</p>
