--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Movies.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Movies.cshtml
@@ -21,7 +21,7 @@
     @foreach (var movie in Model)
     {
         <div class="thumbnail">
-            <img class="product-image" src="~/images/Products/product-@(movie.Id).png" alt="Product image" />
+            <img src="~/images/Movies/@(movie.Id).png" alt="Movie image" />
             <div class="caption">
                 <h3>@movie.MovieTitle</h3>
                 <h4>@movie.Description</h4>
