--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Shared/Error.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Shared/Error.cshtml
@@ -3,10 +3,9 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Password does not match, please try again.</h1>
-<h2 class="text-danger">@ViewBag.Message</h2>
+<h1 class="text-danger">Error.</h1>
 
-@*@if (Model.ShowRequestId)
+@if (Model.ShowRequestId)
 {
     <p>
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
@@ -19,4 +18,4 @@
 </p>
 <p>
     <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>*@
+</p>
