--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Shared/_Layout.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                    @*add authorization*@
                     @if (User.IsInRole("admin"))
                     {
-                        <li><a asp-area="" asp-controller="User" asp-action="ShowPanel">Admin Panel</a></li>
+                        <li><a asp-area="" asp-controller="Movie" asp-action="MoviePanel">Movie Panel</a></li>
                     }else
                     {
                         if (User.Identity.IsAuthenticated)
