--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/MoviePanel.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/MoviePanel.cshtml
@@ -44,7 +44,8 @@
     </td>
     <td>
         <a asp-action="AddOrEdit" asp-route-id="@item.Id"><i class="glyphicon glyphicon-edit"></i></a>
-        <a asp-action="Delete" asp-route-id="@item.Id"  onclick="return confirm('Are you sure to delete this record?')"><i class="glyphicon glyphicon-remove"></i></a>
+        <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this record?')"><i class="glyphicon glyphicon-remove"></i></a>
+        <span asp-validation-for="@item.Id" class="text-danger">@ViewBag.Message</span>
     </td>
 </tr>}
     </tbody>
