crud operations update

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -14,6 +14,7 @@
                 <h5>Genre: @Model.Genre</h5>
                 <p>Director: @Model.Director</p>
                 <p>Language: @Model.Language</p>
+                <p>Tehnology: @Model.Technology</p>
                 <p>Release date: @Model.ReleaseDate.Date</p>
                 <p>Cast:</p>
                 <ul>
