--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/MoviePanel.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/MoviePanel.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h2>Movie Panel</h2>
+<hr />
 
 <table class="table">
     <thead>
@@ -21,7 +22,7 @@
                     @Html.DisplayNameFor(model => model.ReleaseDate)
                 </th>
                 <th>
-                    <a asp-action="AddOrEdit" class="btn btn-primary"><i class="far fa-plus-square"></i>Add</a>
+                    <a asp-action="Add" class="btn btn-success"><i class="far fa-plus-square"></i>Add</a>
                 </th>
             </tr>
 
@@ -43,8 +44,8 @@
         @Html.DisplayFor(modelItem => item.ReleaseDate)
     </td>
     <td>
-        <a asp-action="AddOrEdit" asp-route-id="@item.Id"><i class="glyphicon glyphicon-edit"></i></a>
-        <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this record?')"><i class="glyphicon glyphicon-remove"></i></a>
+        <a asp-action="Edit" asp-route-id="@item.Id"><i class="glyphicon glyphicon-edit"></i></a>
+        <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this movie?')"><i class="glyphicon glyphicon-remove"></i></a>
         <span asp-validation-for="@item.Id" class="text-danger">@ViewBag.Message</span>
     </td>
 </tr>}
