edit view update

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -15,7 +15,7 @@
                 <p>Director: @Model.Director</p>
                 <p>Language: @Model.Language</p>
                 <p>Tehnology: @Model.Technology</p>
-                <p>Release date: @Model.ReleaseDate.Date</p>
+                <p>Release date: @Model.ReleaseDate</p>
                 <p>Cast:</p>
                 <ul>
                     @foreach (var actor in Model.Actors)
