--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Edit.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Edit.cshtml
@@ -65,13 +65,34 @@
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label class="col-md-2 control-label" asp-for="Image" >Upload Image</label>
+                    <label class="col-md-2 control-label" asp-for="Image">Upload Image</label>
                     <div class="col-md-5">
                         <input type="file" asp-for="Image" placeholder="upload image">
                     </div>
                 </div>
+                <hr />
+                <h2>Edit Movie Cast</h2>
+                @for (int i = 0; i < Model.Actors.Count; i++)
+                {
+                    <p>Actor no: @(i + 1)</p>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="input-group input-group-md">
+                                <span class="input-group-addon">@Html.Label(expression: $"model.Actors[{i}].FirstName", "First Name")</span>
+                                @Html.TextBox($"model.Actors[{i}].FirstName", Model.Actors[i].FirstName, null, new { @class = "form-control input-md" })
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="input-group input-group-md">
+                                <span class="input-group-addon">@Html.Label(expression: $"model.Actors[{i}].LastName", "Last Name")</span>
+                                @Html.TextBox($"model.Actors[{i}].LastName", Model.Actors[i].LastName, null, new { @class = "form-control input-md" })
+                            </div>
+                        </div>
+                    </div>
+                 }
+                <hr />
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-10">
                         <input type="submit" value="Save" class="btn btn-success" />
                     </div>
                 </div>
