--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -7,7 +7,7 @@
 
 <div class="movies">
         <div class="thumbnail">
-            <img src="~/images/Movies/@(Model.Id).png" alt="Movie image" />
+            <img src="~/images/@(Model.Id).jpg" alt="Movie image" width="150" class="pull-left" />
             <div class="caption">
                 <h3>Title: @Model.MovieTitle</h3>
                 <p> Description: @Model.Description</p>
@@ -16,6 +16,7 @@
                 <p>Language: @Model.Language</p>
                 <p>Tehnology: @Model.Technology</p>
                 <p>Release date: @Model.ReleaseDate</p>
+                <hr />
                 <p>Cast:</p>
                 <ul>
                     @foreach (var actor in Model.Actors)
