movie view update

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Shared/_Layout.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-        <link href='@(Url.Content("~/css/site.css"))' rel="stylesheet" type="text/css" />
+        <link href='@(Url.Content("~/css/myStyles/style.css"))' rel="stylesheet" type="text/css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
