--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Movies.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Movies.cshtml
@@ -20,8 +20,8 @@
 <div class="row">
     @foreach (var movie in Model)
     {
-        <div class="thumbnail col-md-4 panel-success text-center">
-            <img src="~/images/@(movie.Id).jpg" alt="Movie image" width="150" />
+        <div class="thumbnail col-md-3 text-center">
+            <img src="~/images/@(movie.Id).jpg" alt="Movie image" class="movieImage" />
             <div class="caption">
                 <h3>@movie.MovieTitle</h3>
                 <h4>@movie.Description</h4>
@@ -31,6 +31,5 @@
                 </p>
             </div>
         </div>
-
     }
 </div>
