update view models

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/User/LogIn.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/User/LogIn.cshtml
@@ -4,52 +4,47 @@
 }
 
 <h2>Welcome!</h2>
-
 <div class="container">
-    <div>
-        <h2>Please login!</h2>
-        <div class="col-md-12">
-            <form asp-action="Login" asp-controller="User" method="post">
-                <div class="row">
-                    <div class="col-md-2"></div>
-                    <div class="col-md-4">
-                        <label asp-for="Username"></label>
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-user"></span></span>
-                            <input class="form-control" type="text" asp-for="Username" />
+    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <div class="panel-title">Sign In</div>
+                <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="#">Forgot password?</a></div>
+            </div>
+            <div style="padding-top:30px" class="panel-body">
+                <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+                <form id="loginform" class="form-horizontal" role="form" asp-action="Login" asp-controller="User" method="post">
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="login-username" class="form-control" type="text" asp-for="Username">
+                    </div>
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="login-password" class="form-control" type="password" asp-for="Password">
+                    </div>
+                    <div class="input-group">
+                        <div class="checkbox">
+                            <label>
+                                <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+                            </label>
                         </div>
-                        <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2"></div>
-                    <div class="col-md-4">
-                        <label asp-for="Password"></label>
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock"></span></span>
-                            <input class="form-control" type="password" asp-for="Password" />
+                    <div style="margin-top:10px" class="form-group">
+                        <div class="col-sm-12 controls">
+                            <button type="submit" class="btn btn-success">Login</button>
+                            <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
+
                         </div>
-                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
-                </div>
-                <br />
-                <div class="row">
-                    <div class="col-md-5"></div>
-                    <div class="col-md-2">
-                        <button type="submit" class="btn btn-success">Login</button>
+                    <div class="form-group">
+                        <div class="col-md-12 control">
+                            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                                Don't have an account? <a asp-action="Register" asp-controller="User"> Register here </a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <h4>
-                    Don't have an account? <a asp-action="Register" asp-controller="User"> Register here </a> and proceed buying!
-                </h4>
+                </form>
             </div>
         </div>
     </div>
 </div>
-
