--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/wwwroot/css/myStyles/style.css
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/wwwroot/css/myStyles/style.css
@@ -21,4 +21,9 @@
     border-radius: 12px;
     border: none !important;
     font-family: 'Alegreya Sans', sans-serif;
+    cursor:pointer;
+}
+
+.panel-heading {
+    background-color: white !important;
 }
