movie service update

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Edit.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Edit.cshtml
@@ -81,19 +81,21 @@
                                 <span class="input-group-addon">@Html.Label(expression: $"model.Actors[{i}].FirstName", "First Name")</span>
                                 @Html.TextBox($"model.Actors[{i}].FirstName", Model.Actors[i].FirstName, null, new { @class = "form-control" })
                             </div>
+                            <span class="text-danger">@Html.ValidationMessage(expression: $"model.Actors[{i}].FirstName") </span>
                         </div>
                         <div class="col-md-4">
                             <div class="input-group input-group-md">
                                 <span class="input-group-addon">@Html.Label(expression: $"model.Actors[{i}].LastName", "Last Name")</span>
                                 @Html.TextBox($"model.Actors[{i}].LastName", Model.Actors[i].LastName, null, new { @class = "form-control" })
                             </div>
+                            <span class="text-danger">@Html.ValidationMessage(expression: $"model.Actors[{i}].FirstName")</span>
                         </div>
                     </div>
-                }
-                <hr />*@
+                }*@
+                <hr />
                 <div class="form-group">
                     <div class="col-md-10">
-                        <input type="submit" value="Save" class="btn btn-success" />
+                        <button type="submit" class="btn btn-success">Save</button>
                     </div>
                 </div>
             </fieldset>
