--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -7,7 +7,7 @@
 
 <div class="movies">
         <div class="thumbnail">
-            <img src="~/images/@(Model.Id).jpg" alt="Movie image" style="display:block" width="100" class="pull-left" />
+            <img src="~/images/@Model.Image" alt="Movie image" style="display:block" width="100" class="pull-left" />
             <div class="caption">
                 <h3>Title: @Model.MovieTitle</h3>
                 <p> Description: @Model.Description</p>
