--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Edit.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Edit.cshtml
@@ -6,7 +6,7 @@
 <h2>Edit Movie</h2>
 <div class="container">
     <div class="row">
-        <form class="form-horizontal" asp-action="Edit" asp-controller="Movie" method="post">
+        <form class="form-horizontal" asp-action="Edit" asp-controller="Movie" method="post" enctype="multipart/form-data">
             <fieldset>
                 <div class="form-group">
                     <label class="col-md-2 control-label" asp-for="MovieTitle">Movie Title</label>
@@ -67,7 +67,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" asp-for="Image">Upload Image</label>
                     <div class="col-md-5">
-                        <input type="file" asp-for="Image" placeholder="upload image">
+                        <input type="file" asp-for="Image" value="@Model.Image" placeholder="upload image" formenctype="multipart/form-data">
                     </div>
                 </div>
                 <hr />
