buy ticket view added

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -26,7 +26,7 @@
                 </ul>
 
                 <p>
-                    <a asp-action="LogIn" asp-controller="User" class="btn btn-primary">Buy ticket</a>
+                    <a asp-action="Index" asp-controller="Ticket" class="btn btn-primary">Buy ticket</a>
                 </p>
             </div>
         </div>
