edit operation update

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Ticket/Index.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Ticket/Index.cshtml
@@ -206,7 +206,7 @@
                         <ul>
                             <li>
                                 <p>Location</p>
-                                <span>HB Cinema Box Corner</span>
+                                <span>HB Cinestar Box Corner</span>
                             </li>
                             <li>
                                 <p>TIME</p>
@@ -214,15 +214,15 @@
                             </li>
                             <li>
                                 <p>Movie name</p>
-                                <span>Home Alone</span>
+                                <span>Random Title</span>
                             </li>
                             <li>
                                 <p>Ticket number</p>
-                                <span>2 Adults, 2 Children, 2 Seniors</span>
+                                <span>2 Adults, 2 Children</span>
                             </li>
                             <li>
                                 <p>Price</p>
-                                <span>89$</span>
+                                <span>120$</span>
                             </li>
                         </ul>
                     </div>
