--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -26,7 +26,7 @@
                 </ul>
 
                 <p>
-                    <a asp-action="Index" asp-controller="Ticket" class="btn btn-primary col-md-6 ticket-btn">Buy ticket</a>
+                    <a asp-action="Index" asp-controller="Ticket"  asp-route-id="@Model.Id" class="btn btn-primary col-md-6 ticket-btn">Buy ticket</a>
                 </p>
             </div>
         </div>
