--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -25,9 +25,12 @@
                     }
                 </ul>
 
-                <p>
-                    <a asp-action="Index" asp-controller="Ticket"  asp-route-id="@Model.Id" class="btn btn-primary col-md-6 ticket-btn">Buy ticket</a>
-                </p>
+                <span class= "col-md-2">
+                    <a asp-action="Index" asp-controller="Ticket" asp-route-id="@Model.Id" class="btn btn-primary ticket-btn">Buy ticket</a>
+                </span>
+                <span class="col-md-2">
+                    <a asp-action="Login" asp-controller="User" asp-route-id="@Model.Id" class="btn btn-primary ticket-btn">Make a reservation</a>
+                </span>
             </div>
         </div>
 </div>
