--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Ticket/Index.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Ticket/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieViewModel
+﻿@model TicketViewModel
 @{
     ViewData["Title"] = "Index";
 }
@@ -214,7 +214,7 @@
                             </li>
                             <li>
                                 <p>Movie name</p>
-                                <span>Random Title</span>
+                                <span>Random title</span>
                             </li>
                             <li>
                                 <p>Ticket number</p>
