--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Edit.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Edit.cshtml
@@ -75,6 +75,7 @@
                 @for (int i = 0; i < Model.Actors.Count; i++)
                 {
                     <p>Actor no: @(i + 1)</p>
+                    @Html.HiddenFor(x => x.Actors[i].Id)
                     <div class="row">
                         <div class="col-md-4">
                             <div class="input-group input-group-md">
@@ -93,7 +94,7 @@
                         <div class="col-md-4">
                             <div class="input-group input-group-md">
                                 <span class="input-group-addon">@Html.LabelFor(m => m.Actors[i].Age)</span>
-                                @Html.TextBoxFor(m => m.Actors[i].Age, new { type="number", min="1", max="100" })
+                                @Html.TextBoxFor(m => m.Actors[i].Age, new { type = "number", min = "1", max = "100" })
                             </div>
                             <span class="text-danger">@Html.ValidationMessageFor(m => m.Actors[i].Age)</span>
                         </div>
